// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v4 validate options should throw an error on the "esModule" option with "true" value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.esModule should be a boolean.
   -> By default, webpack-image-srcset-loader generates JS modules that use the ES modules syntax. Default to true."
`;

exports[`v4 validate options should throw an error on the "optionsGenerator" option with true value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.optionsGenerator should be an instance of function.
   -> A function that returns the option to be passed on to the given resizeLoader."
`;

exports[`v4 validate options should throw an error on the "resizeLoader" option with 3 value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.resizeLoader should be a string.
   -> Name of resize loader. Default to "webpack-image-resize-loader"."
`;

exports[`v4 validate options should throw an error on the "scaleUp" option with "true" value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.scaleUp should be a boolean.
   -> Whether or not to scale up the image when the desired size is larger than the image size. Default to false."
`;

exports[`v4 validate options should throw an error on the "sizes" option with ["0.5"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["0.5"] is not a valid value."
`;

exports[`v4 validate options should throw an error on the "sizes" option with ["0.5x"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["0.5x"] is not a valid value."
`;

exports[`v4 validate options should throw an error on the "sizes" option with ["10"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10"] is not a valid value."
`;

exports[`v4 validate options should throw an error on the "sizes" option with ["10.0w"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10.0w"] is not a valid value."
`;

exports[`v4 validate options should throw an error on the "sizes" option with ["10h"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10h"] is not a valid value."
`;

exports[`v4 validate options should throw an error on the "sizes" option with [3] value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.sizes[0] should be a string."
`;

exports[`v4 validate options should throw an error on the "sizes" option with [null] value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.sizes[0] should be a string."
`;

exports[`v5 validate options should throw an error on the "esModule" option with "true" value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.esModule should be a boolean.
   -> By default, webpack-image-srcset-loader generates JS modules that use the ES modules syntax. Default to true."
`;

exports[`v5 validate options should throw an error on the "optionsGenerator" option with true value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.optionsGenerator should be an instance of function.
   -> A function that returns the option to be passed on to the given resizeLoader."
`;

exports[`v5 validate options should throw an error on the "resizeLoader" option with 3 value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.resizeLoader should be a string.
   -> Name of resize loader. Default to "webpack-image-resize-loader"."
`;

exports[`v5 validate options should throw an error on the "scaleUp" option with "true" value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.scaleUp should be a boolean.
   -> Whether or not to scale up the image when the desired size is larger than the image size. Default to false."
`;

exports[`v5 validate options should throw an error on the "sizes" option with ["0.5"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["0.5"] is not a valid value."
`;

exports[`v5 validate options should throw an error on the "sizes" option with ["0.5x"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["0.5x"] is not a valid value."
`;

exports[`v5 validate options should throw an error on the "sizes" option with ["10"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10"] is not a valid value."
`;

exports[`v5 validate options should throw an error on the "sizes" option with ["10.0w"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10.0w"] is not a valid value."
`;

exports[`v5 validate options should throw an error on the "sizes" option with ["10h"] value 1`] = `
"(Emitted value instead of an instance of Error) Invalid options object. webpack-image-srcset-loader has been initialised using an options object that does not match the API schema.
      - options.sizes ["10h"] is not a valid value."
`;

exports[`v5 validate options should throw an error on the "sizes" option with [3] value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.sizes[0] should be a string."
`;

exports[`v5 validate options should throw an error on the "sizes" option with [null] value 1`] = `
"Invalid options object. webpack-image-srcset-loader has been initialized using an options object that does not match the API schema.
 - options.sizes[0] should be a string."
`;
